--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
 body {
+  background-color: #000;
   color: #bbb;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-a {
-    color: #bbb;
-    text-decoration: none;
-}
